[tool.poetry]
name = "libb-ftp"
version = "0.1.0"
description = ""
authors = ["bissli <bissli@xyz.com>"]
readme = "README.md"
packages = [{ include = "ftp", from = "src" }]

[tool.poetry.dependencies]
python = "~3.11"

paramiko = "*"
opendate = "*"
libb-util = { git = "https://github.com/bissli/libb-util", rev = "master" }

# == test
asserts = { version = "*", optional = true }
docker = { version = "*", optional = true }
pytest = { version = "*", optional = true }
pytest-mock = { version = "*", optional = true }
pytest-runner = { version = "*", optional = true }
pdbpp = { git = "https://github.com/pdbpp/pdbpp", optional = true, rev = "master" }

[tool.poetry.extras]
test = [
  "asserts",
  "docker",
  "pdbpp",
  "pytest",
  "pytest-mock",
  "pytest-runner",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
