[tool.poetry]
name = "libb-ftp"
version = "0.1.0"
description = ""
authors = ["bissli <bissli@xyz.com>"]
readme = "README.md"
packages = [{ include = "ftp", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"

paramiko = "*"
opendate = "*"
libb-util = "*"

# == test
asserts = { version = "*", optional = true }
docker = { version = "*", optional = true }
pytest = { version = "*", optional = true }
pytest-mock = { version = "*", optional = true }
pytest-runner = { version = "*", optional = true }

[tool.poetry.extras]
test = [
  "asserts",
  "docker",
  "pytest",
  "pytest-mock",
  "pytest-runner",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
